# product-discovery-ai-simulation

./: .env.example  README.md  TODO.md  pyproject.toml
config/: personas.yaml
evaluation/: golden_scenarios.yaml
evaluation/sample_roadmaps/: b2b_saas_efficiency.md  mobile_smb_usability.md
product_roadmap_agents/: __init__.py  cli.py  config.py  evaluation.py  models.py  personas.py  workflow.py
scripts/: evaluate_golden.py
tests/: test_golden_eval.py  test_personas.py
